bitboardのテスト中

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/python/bind/search.cp39-win_amd64.pyd
+/python/bind/search.cp39-win_amd64.pyd.manifest
